--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
